--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="padding10">10dp</dimen>
     <dimen name="padding_20">20dp</dimen>
     <dimen name="title_text_16">16sp</dimen>
+    <dimen name="title_text_large">20sp</dimen>
 </resources>
